--- a/src/views/movies/create.hbs
+++ b/src/views/movies/create.hbs
@@ -5,7 +5,7 @@
             </h2>
         </div>
 
-        <form action="/movies/create" method="POST" class="createForm">
+        <form method="POST" class="createForm">
             <h2>Add Movie</h2>
             <ul class="noBullet">
                 <li>
