adjust config files

--- a/src/views/cast/create.hbs
+++ b/src/views/cast/create.hbs
@@ -21,11 +21,11 @@
                 </li>
                 <li>
                     <label for="name-in-movie">Name in Movie:</label>
-                    <input type="text" class="inputFields" id="name-in-movie" name="" />
+                    <input type="text" class="inputFields" id="name-in-movie" name="" disabled />
                 </li>
                 <li>
                     <label for="image">Cast Image:</label>
-                    <input type="text" class="inputFields" id="image" name="" />
+                    <input type="text" class="inputFields" id="image" name="imageUrl" />
                 </li>
                 <li id="center-btn">
                     <button id="create-btn">Add Cast</button>
